--- a/RiTHMWeeklyReport.tex
+++ b/RiTHMWeeklyReport.tex
@@ -17,9 +17,29 @@
 \begin{abstract}
 Details about the current progress of \rithm development and journal paper
 \end{abstract}
-\section{Current Results}
+\section{Previous Results}
 \begin{itemize}
-	\item \rithm For CRV'15 competition which will be held with RV'15 conference, benchmarks are submitted for 'C' program monitoring track and Offline Monitoring track.
+	
+	
+	\item MTL parser has been developed, the monitor for MTL is being developed. \textbf{Update}: Including both Past-time and future-time MTL variants. 
+	\item For developing predicate specification language, work is done on analysis of script engines which can be used. Beanshell \url{http://www.beanshell.org/intro.html} is under consideration along with JavaScript engines which can be embedded into java code, and the predicate definitions could be specified using the languages of these engines.
+	
+	\item IronForge data, and running \rithm on the properties of the data. Work in Progress.
+	
+	\item Integration of DIME + \rithm - Papers worked on for analyzing the previous work. Work done by Smolka et al. focuses on using Markov Chains for providing probabilistic estimates on the satisfaction of specifications. On similar lines, Probabilistic Timed Automata could be used for specifying 
+	models of systems which exhibit the characteristics of incomplete-data for verification along with the requirement of hard real-time deadlines.
+	\item 'Lessons Learnt' section for journal paper is being worked upon.
+	\item \rithm's monitor using specifications in the format of regular expressions is being enhanced so that monitoring is trace-length independent. The coding is in progress and we now use \url{http://www.brics.dk/automaton/doc/index.html} to create automaton from regular expression and input trace ti this automaton event by event. 
+	
+	
+	
+\end{itemize}
+    
+
+\section{Previous Results}
+\begin{itemize}
+\item 
+	\rithm For CRV'15 competition which will be held with RV'15 conference, benchmarks are submitted for 'C' program monitoring track and Offline Monitoring track.
 	The details of benchmarks which are submitted can be found at 
 	\begin{itemize}
 		\item For 'C' program monitoring track - \url{https://forge.imag.fr/plugins/mediawiki/wiki/crv15/index.php/C_track}
@@ -45,23 +65,6 @@ Details about the current progress of \rithm development and journal paper
 		\item $\forall$ $>50\%$ pid, $\forall$ $>50\%$ tid: ( $\diamondsuit$ ( thsem $\vee$ thmutex ) ) - Vioated by trace
 	\end{itemize}
 	
-	\item MTL parser has been developed, the monitor for MTL is being developed. \textbf{Update}: Including both Past-time and future-time MTL variants. 
-	\item For developing predicate specification language, work is done on analysis of script engines which can be used. Beanshell \url{http://www.beanshell.org/intro.html} is under consideration along with JavaScript engines which can be embedded into java code, and the predicate definitions could be specified using the languages of these engines.
-	
-	\item IronForge data, and running \rithm on the properties of the data. Work in Progress.
-	
-	\item Integration of DIME + \rithm - Papers worked on for analyzing the previous work. Work done by Smolka et al. focuses on using Markov Chains for providing probabilistic estimates on the satisfaction of specifications. On similar lines, Probabilistic Timed Automata could be used for specifying 
-	models of systems which exhibit the characteristics of incomplete-data for verification along with the requirement of hard real-time deadlines.
-	\item 'Lessons Learnt' section for journal paper is being worked upon.
-	\item \rithm's monitor using specifications in the format of regular expressions is being enhanced so that monitoring is trace-length independent. The coding is in progress and we now use \url{http://www.brics.dk/automaton/doc/index.html} to create automaton from regular expression and input trace ti this automaton event by event. 
-	
-	
-	
-\end{itemize}
-    
-
-\section{Previous Results}
-\begin{itemize}
 \item
 Verbose LTL parser is implemented which uses verbose representation of LTL operators. \newline
 The code is at \url{https://github.com/yogirjoshi/parsertools.git}.
