--- a/bibList.bib
+++ b/bibList.bib
@@ -1,4 +1,4 @@
-%%%%%%%%%%% sample.bib %%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%% sample1.bib %%%%%%%%%%%%%%%%%%%
 @article{RefWorks:10,
 	author={Andreas Bauer and Martin Leucker and Christian Schallhart},
 	year={2011},
